service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: demo-app
  sessionAffinity: None
  type: ClusterIP
