ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.minikube.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: demo-app-service
            port: 
              number: 80
  - host: grafana.minikube.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-grafana
            port: 
              number: 80
